Widened resultSection button to prevent text wrapping

--- a/static/css/test.scss
+++ b/static/css/test.scss
@@ -84,7 +84,7 @@ body {
     grid-row: 4 / 5;
     font-size: 1.5em;
     button {
-        width: 15%;
+        width: 55%;
     }
 }
 section {
@@ -119,7 +119,7 @@ section {
         grid-row: 5 / 6;  
     }
     #resultsSection button {
-        width: 30%;
+        width: 20%;
     }
     #question {
         height: 18em;
